# bbs-fetch-post-discord-bot

./: .env.example  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
