[package]
name = "bbs-fetch-post-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.4"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "tls-rustls", "macros"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
